--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "demo-simple-tools",
   "description": "A tools project",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "author": "meilincheng <lincheng.mei@visionacademy.cn>",
   "license": "MIT",
   "private": false,
@@ -11,7 +11,7 @@
     "tool"
   ],
   "scripts": {
-    "build": "tsc"
+    "build": "rimraf dist && tsc"
   },
   "files": [
     "dist"
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/node": "^16.4.10",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "rimraf": "^3.0.2",
     "ts-loader": "^9.2.4",
     "tslint": "^6.1.3",
     "tslint-config-standard": "^9.0.0",
